# NLP_code

chat_app/: chat_documents.py  embed_documents.py  flaskapi.py  run_chat.py  streamlit_app.py
evals/: README.md  bm25_dropout.py  config.json  create_dataset.py  cross_enc_search.py  funcs.py  triplet_dataset.py
evals/datasets/: mk_dataset.py
llm_training/: Accelerate_training.py
llm_training/llm_chat/: llm_chat.py  prompting.py
llm_training/model_training/: .training_dataset.py.swp  config.json  mlm_nsp_train.py  training_dataset.py
llm_training/sentence_bert/: config.json  output_scores.csv
notebooks/: Accelerate_BERT_Semantic_Search.ipynb  BERT_Semantic_Search.ipynb  dataset-creation-example.ipynb  training-job-example-notebook.ipynb
notebooks/.ipynb_checkpoints/: data-cleaning-example-checkpoint.ipynb  dataset-creation-example-checkpoint.ipynb  training-job-example-notebook-checkpoint.ipynb
speech-to-text-files/: bark_scratch.py  setup.cfg
speech-to-text-files/reports/: Project_Plan_Template.odt
speech-to-text-files/src/: conda_chats.yaml
speech-to-text-files/src/chat/: agent.py  flaskapp.py  funcs.py  hit_speak_api.py  listener.py  main.py  modeler.py  modeler_2.py  modeler_call.py  prepare_env.sh  record  speaker.py  speaker_gpus.py  watcher.py
speech-to-text-files/src/speech-to-text/: funcs.py  listener.py  nine_line_dict.json  phonetic_alphabet.json  watcher.py
speech-to-text-files/src/speech-to-text/jsons/: ['recording1'].json  ['recording2'].json
speech-to-text-files/src/speech-to-text/jsons/maps/: map_['recording2'].html
(+12 files in other folders)
