[metadata]
name = packagename
version = 0.0.1
author = Jane Doe
author_email = janedoe2@gmail.com
description = the bestest Python data science package written ever
classifiers =
    Programming Language :: Python :: 3.6
    License :: Other/Proprietary License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

